--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
       </div>
     </header>
     <!-- navbar -->
-    <nav class="flex justify-center flex-wrap gap-6 p-5 text-lg font-semibold">
+    <nav
+      class="flex justify-center flex-wrap gap-6 p-5 text-lg font-semibold border-2 rounded-lg border-b-cyan-400 shadow-[0_0_15px_#00bfff]"
+    >
       <a href="#inicio" class="hover:text-cyan-400"> Inicio </a>
       <a href="#sobre-mi" class="hover:text-cyan-400"> Sobre mí </a>
-      <a href="#proyectos" class="hover:text-cyan-400"> Proyectos </a>
       <a href="#habilidades" class="hover:text-cyan-400"> Habilidades </a>
+      <a href="#proyectos" class="hover:text-cyan-400"> Proyectos </a>
+
       <a href="#contacto" class="hover:text-cyan-400"> Contacto </a>
     </nav>
     <main
