--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
               <div class="p-4">
                 <h4 class="text-lg sm:text-xl font-bold mb-1">Practica 3</h4>
                 <p class="text-cyan-200 text-sm">
-                  Tercera práctica calificada donde consolidé el uso de diseño
-                  responsivo.
+                  Tercera práctica calificada donde hice uso de etiquetas y css
+                  un poco más estructurado.
                 </p>
               </div>
             </div>
@@ -206,8 +206,8 @@
               <div class="p-4">
                 <h4 class="text-lg sm:text-xl font-bold mb-1">Practica 4</h4>
                 <p class="text-cyan-200 text-sm">
-                  Cuarta práctica calificada: inicio en la lógica y estructura
-                  de interfaces.
+                  Cuarta práctica calificada donde consolidé el uso de diseño
+                  responsivo.
                 </p>
               </div>
             </div>
