--- a/index.html
+++ b/index.html
@@ -404,6 +404,14 @@
           </div>
         </form>
       </section>
+      <!-- Botón para descargar CV -->
+<div class="mt-6 flex justify-center">
+  <a href="./cv/cv.pdf" download
+     class="bg-cyan-500 hover:bg-cyan-400 text-black font-semibold px-6 py-3 rounded-xl shadow-lg shadow-cyan-500/40 transition duration-300 transform hover:scale-105 hover:shadow-cyan-400/60">
+      Descargar CV
+  </a>
+</div>
+
     </main>
     <footer class="bg-black text-white py-4">
       <div class="max-w-5xl mx-auto text-center">
