--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
     <!-- Botón para ver todos los proyectos -->
     <div class="text-center">
-        <a href="./html/proyectos.html" 
+        <a href="./proyectos.html" 
            class="inline-flex items-center gap-3 bg-cyan-500 hover:bg-cyan-400 text-black font-bold text-lg px-8 py-4 rounded-xl shadow-[0_0_20px_#00bfff] hover:shadow-[0_0_30px_#00bfff] transition-all duration-300 transform hover:scale-105 group">
             <span>Ver Todos Mis Proyectos</span>
             <svg class="w-5 h-5 transition-transform group-hover:translate-x-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
