--- a/proyectos.html
+++ b/proyectos.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/output.css" />
-    <script src="../js/proyectos.js"></script>
+    <link rel="stylesheet" href="./css/output.css" />
+    <script src="./js/proyectos.js"></script>
     <script type="module" defer>
         import{inicializarMenuMovil} from "../js/menu.js"
         inicializarMenuMovil()
